--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
           </li>
 
           <li class="social-item">
-            <a href="/var/www/html/ravenaddams/vcportfolio/assets/links/test1.html" class="social-link">
+            <a href="https://www.instagram.com/" class="social-link">
               <img src="Instagram1.png" alt="Instagram Logo">
             </a>
           </li>
