--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="assets/links/test1.html" class="social-link">
+            <a href="assets/links/test1.html" class="social-link">Page 2
               <img src="./assets/images/Raventiny.png" alt=" Raven Logo">
             </a>
           </li>
