--- a/index.html
+++ b/index.html
@@ -135,19 +135,19 @@
 
           <li class="social-item">
             <a href="https://github.com" class="social-link">
-              <img src="github.png" alt="github Logo">
+              <img src="./assets/images/github.png" alt="github Logo">
             </a>
           </li>
 
           <li class="social-item">
             <a href="https://www.instagram.com/" class="social-link">
-              <img src="Instagram1.png" alt="Instagram Logo">
+              <img src="./assets/images/Instagram1.png" alt="Instagram Logo">
             </a>
           </li>
           
           <li class="social-item">
             <a href="https://www.linkedin.com/in/ronald-addams-ab54ba217/" class="social-link">
-              <img src="LinkenIn1.png" alt="Instagram Logo">
+              <img src="./assets/images/LinkenIn1.png" alt="LinkedIn Logo">
             </a>
           </li>
 
