--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
                   <p>
                     Operating Systems and You: Becoming a Power User
                     system Administration and IT Infrastructure Services
-                    Technical Support Fundamentals
+                    Technical Support Fundamentals:
                     The Bits and Bytes of Computer Networking
                     IT Security: Defense against the digital dark arts 
 
