--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
 
         <ul class="social-list">
 
-          <li class="social-item">
+          <!--<li class="social-item">
             <a href="assets/links/test1.html" class="social-link">Page 2
               <img src="./assets/images/Raventiny.png" alt=" Raven Logo">
             </a>
-          </li>
+          </li>-->
 
           <li class="social-item">
             <a href="https://github.com" class="social-link">
@@ -141,7 +141,7 @@
 
           <li class="social-item">
             <a href="https://www.instagram.com/" class="social-link">
-              <img src="./assets/images/Instagram1.png" alt="Instagram Logo">
+              <img src="./assets/images/Instagram.png" alt="Instagram Logo">
             </a>
           </li>
           
