--- a/index.html
+++ b/index.html
@@ -134,8 +134,8 @@
           </li>
 
           <li class="social-item">
-            <a href="https://github.com" class="social-link">
-              <img src="./assets/images/github.png" alt="github Logo">
+            <a href="/assets/links/test1.html">Link to Test1 Page>
+            <img src="./assets/images/github.png" alt="github Logo">
             </a>
           </li>
 
