--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
 
         <ul class="social-list">
 
-          <li class="social-item">
+        <!--  <li class="social-item">
             <a href="/var/www/html/ravenaddams/vcportfolio/https-ravenheart-meow.github.io-RavenAddams-/assets/links/test1.html" class="social-link">
               <img src="./assets/images/Raventiny.png" alt=" Raven Logo">
             </a>
-          </li>
+          </li>-->
 
           <li class="social-item">
             <a href="https://github.com" class="social-link">
