--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/RavenAddams.jpg" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/images/RavenA4.png" type="image/x-icon">
 
   <!--
     - custom css link
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="1691375315480.jpeg" alt="Ronald Addams" width="80">
+          <img src="./assets/images/RavenAddams.jpg" alt="Ronald Addams" width="80">
         </figure>
 
         <div class="info-content">
