--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@ s0.parentNode.insertBefore(s1,s0);
                   <img src="Coursera CX8CFR7J33SJ.png" alt="IBM" width="60" data-testimonials-avatar>
                 </figure>
 
-                <h4 class="h4 testimonials-item-title" data-testimonials-title>US Navy</h4>
+                <h4 class="h4 testimonials-item-title" data-testimonials-title>IBM Cybersecurity Analyst</h4>
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
