--- a/index.html
+++ b/index.html
@@ -592,8 +592,7 @@ s0.parentNode.insertBefore(s1,s0);
               <span>2013 — 2014</span>
 
               <p class="timeline-text">
-                ALgebra
-                Computer Science
+                Algebra and Computer Science.
                 
               </p>
 
@@ -637,7 +636,7 @@ s0.parentNode.insertBefore(s1,s0);
 
               <p class="timeline-text">
                 I am currently taking courses to obtain certifications in cyber security.
-                During this time, I am also learning to work with python coding, and programming, 
+                During this time, I am also learning to work with Python coding, and programming, 
                 as well as SQL and Java..
               </p>
 
@@ -647,7 +646,7 @@ s0.parentNode.insertBefore(s1,s0);
 
               <h4 class="h4 timeline-item-title">Shop Manager</h4>
 
-              <span>August2021 to Present</span>
+              <span>August 2021 to Present</span>
 
               <p class="timeline-text">
                 I Manage the day to day operation of the shop and schedules for 10 people.
@@ -667,7 +666,7 @@ s0.parentNode.insertBefore(s1,s0);
 
               <p class="timeline-text">
                 Coordinated with 5 division team leads in order to meet customer expectations and command goals.
-                Directed 55 production workers, delegating tasks and ensuring production deadlines were met.
+                Directed 55 production workers, delegated tasks, and ensured production deadlines were met.
                 Conducted daily status meetings to keep on top of demand, and stay ahead of our goals.
                 Maintained production database for 14 departments.
               </p>
@@ -687,8 +686,7 @@ s0.parentNode.insertBefore(s1,s0);
                 Supervised 18 people in the maintenance and repair of 4 shipboard diesel engines.
                 Directed 17 personnel in the completion of daily administrative tasks, completing our annual assessment 
                 with 95% passing score.
-                Managed 3 separate databases, containing 4300 ships configuration item, the ships maintenance library, and t
-                rouble calls for 16 departments.
+                Managed 3 separate databases, containing 4300 ships configuration items, the ships maintenance library, and trouble calls for 16 departments.
                 Implemented a QR code database for tracking books and technical documentation borrowed from the ships library.
                 Founded an LGBTQ+ support group and worked with other leaders to provide a strength based mentorship program 
                 for LGBTQ+ Sailors.
@@ -721,7 +719,7 @@ s0.parentNode.insertBefore(s1,s0);
 
               <p class="timeline-text">
                 Conducted electrical safety checks.
-                Installed electrical cables on bored 3 submarines.
+                Installed electrical cables on board 3 submarines.
                 Inspected 2 submarines for electrical deficiencies.
               </p>
 
@@ -737,8 +735,8 @@ s0.parentNode.insertBefore(s1,s0);
                 Assisted in evaluating 7 personnel.
                 Conducted and supervised the completion of maintenance and troubleshooting of the computer system used in the tactical systems for the ship.
                 Completed 30 calibration jobs.
-                Maintained the security and integrity of 3 secret and top secret safes.
-                Oversaw an offsite shop responsible for painting and powder coating items repaired during the ships overhaul.
+                Maintained the security and integrity of 3 secret and top-secret safes.
+                Oversaw an off-site shop responsible for painting and powder-coating items repaired during the ship's overhaul.
                 Inspected 10 spaces for deficiencies, and documented repair actions.
               </p>
 
@@ -752,8 +750,7 @@ s0.parentNode.insertBefore(s1,s0);
                   Maintained a daily and weekly schedule.
                   Contacted prospective recruits via telephone, and in person visits.
                   Communicated with local schools to conduct presentations for students.
-                  Conducted interviews with candidates.
-                  Completed contracts with new recruits.
+                  Conducted interviews with candidates and completed contracts with new recruits.
                   Conducted medical and criminal background checks.
                   Led Monthly training sessions with new recruits waiting to ship out.
                 </p>
@@ -768,8 +765,8 @@ s0.parentNode.insertBefore(s1,s0);
               <span>October 2002 to December 2005</span>
 
               <p class="timeline-text">
-                Operated and maintained the ships tactical servers, and electronic systems.
-                Safeguarded 2 Classified material storage areas.
+                Operated and maintained the ship's tactical servers and electronic systems.
+                Safeguarded 2 classified material storage areas.
                 Used technical drawings to repair computer systems used for tactical tracking.
                 Guarded nuclear weapons systems..
               </p>
