--- a/index.html
+++ b/index.html
@@ -227,14 +227,16 @@ s0.parentNode.insertBefore(s1,s0);
 
         <section class="about-text">
           <p>
-            My military experience has instilled in me a profound work ethic, 
-            impeccable attention to detail, and the ability to thrive in 
-            high-pressure environments. With a track record of successfully 
-            leading diverse teams and managing complex projects, I am excited 
-            to leverage my skills in a civilian setting. My passion for continuous 
-            learning and my proven ability to rapidly acquire new skills further 
-            einforce my commitment to making a meaningful contribution to your 
-            rganization's success.
+            My military experience has instilled in me a profound 
+            work ethic, unwavering attention to detail, and the
+            ability to excel in high-pressure environments. With 
+            a proven track record of successfully leading diverse 
+            teams and managing complex projects, I am enthusiastic 
+            about applying my skills in a civilian setting. My passion 
+            for continuous learning and my demonstrated ability to 
+            rapidly acquire new skills further solidify my commitment 
+            to making a meaningful contribution to the success of your 
+            organization.
           </p>
 
 
@@ -262,9 +264,10 @@ s0.parentNode.insertBefore(s1,s0);
                 <h4 class="h4 service-item-title">Web design</h4>
 
                 <p class="service-item-text">
-                  Create visually appealing and user-friendly websites by combining 
-                  elements like layout, typography, colors, and graphics to effectively 
-                  communicate information and engage visitors.
+                  Create visually appealing and user-friendly websites 
+                  by seamlessly combining elements such as layout, typography, 
+                  colors, and graphics to effectively communicate information 
+                  and captivate visitors.
                 </p>
               </div>
 
@@ -280,8 +283,10 @@ s0.parentNode.insertBefore(s1,s0);
                 <h4 class="h4 service-item-title">Web development</h4>
 
                 <p class="service-item-text">
-                  Build and maintain websites or web applications by using coding languages like 
-                  HTML, CSS, and JavaScript, enabling functionality, interactivity, and responsive design..
+                  Build and maintain websites or web applications by 
+                  utilizing coding languages such as HTML, CSS, and J
+                  avaScript to enable functionality, interactivity, and 
+                  responsive design.
                 </p>
               </div>
 
@@ -315,8 +320,8 @@ s0.parentNode.insertBefore(s1,s0);
                 <h4 class="h4 service-item-title">Cyber Security</h4>
 
                 <p class="service-item-text">
-                  Understand and implement measures to protect digital systems, networks, and data f
-                  rom unauthorized access, attacks, and breaches, ensuring confidentiality, integrity, 
+                  Understand and implement measures to protect digital systems, networks, and data 
+                  from unauthorized access, attacks, and breaches, ensuring confidentiality, integrity, 
                   and availability.
                 </p>
               </div>
@@ -637,7 +642,7 @@ s0.parentNode.insertBefore(s1,s0);
               <p class="timeline-text">
                 I am currently taking courses to obtain certifications in cyber security.
                 During this time, I am also learning to work with Python coding, and programming, 
-                as well as SQL and Java..
+                as well as SQL and Java.
               </p>
 
             </li>
