--- a/index.html
+++ b/index.html
@@ -1161,9 +1161,9 @@ s0.parentNode.insertBefore(s1,s0);
 
 
 
-      <!--
-        - #BLOG
-      -->
+      
+        - #Baking Projects
+      
 
       <article class="blog" data-page="blog">
 
