--- a/index.html
+++ b/index.html
@@ -1161,14 +1161,14 @@ s0.parentNode.insertBefore(s1,s0);
 
 
 
-      
+      <--
         - #Baking Projects
-      
+      -->
 
       <article class="blog" data-page="blog">
 
         <header>
-          <h2 class="h2 article-title">Interests</h2>
+          <h2 class="h2 article-title">Baking</h2>
         </header>
 
         <section class="blog-posts">
