--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <div class="info-content">
           <h1 class="name" title="Ronald Addams">Ronald Addams</h1>
 
-          <p class="title">Cyber Security Specialist</p>
+          <p class="title">Cyber Security Student</p>
         </div>
 
         <button class="info_more-btn" data-sidebar-btn>
@@ -793,11 +793,11 @@ s0.parentNode.insertBefore(s1,s0);
 
               <div class="title-wrapper">
                 <h5 class="h5">Web design</h5>
-                <data value="60">60%</data>
+                <data value="40">40%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 60%;"></div>
+                <div class="skill-progress-fill" style="width: 40%;"></div>
               </div>
 
             </li>
@@ -806,11 +806,11 @@ s0.parentNode.insertBefore(s1,s0);
 
               <div class="title-wrapper">
                 <h5 class="h5">Cyber Security</h5>
-                <data value="80">80%</data>
+                <data value="30">30%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 80%;"></div>
+                <div class="skill-progress-fill" style="width: 30%;"></div>
               </div>
 
             </li>
@@ -819,11 +819,11 @@ s0.parentNode.insertBefore(s1,s0);
 
               <div class="title-wrapper">
                 <h5 class="h5">Coding</h5>
-                <data value="70">70%</data>
+                <data value="40">40%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 70%;"></div>
+                <div class="skill-progress-fill" style="width: 40%;"></div>
               </div>
 
             </li>
@@ -832,11 +832,11 @@ s0.parentNode.insertBefore(s1,s0);
 
               <div class="title-wrapper">
                 <h5 class="h5">Penetration Testing</h5>
-                <data value="75">75%</data>
+                <data value="25">25%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 75%;"></div>
+                <div class="skill-progress-fill" style="width: 25%;"></div>
               </div>
 
             </li>
@@ -858,11 +858,11 @@ s0.parentNode.insertBefore(s1,s0);
 
               <div class="title-wrapper">
                 <h5 class="h5">HTML/CSS</h5>
-                <data value="60">60%</data>
+                <data value="50">50%</data>
               </div>
 
               <div class="skill-progress-bg">
-                <div class="skill-progress-fill" style="width: 60%;"></div>
+                <div class="skill-progress-fill" style="width: 50%;"></div>
               </div>
 
             </li>
